# sscs

./: .flake8  .gitattributes  .gitignore  .pylintrc  Pipfile  README.md  pyproject.toml  setup.py  sol.code-workspace  todo.txt
doc/: stodo.cfg  todo-test.txt  todo.old.py
sol/: __init__.py  builder.py  cli.py  logger.py  oldcode.py  task.py  taskdict.py  tasklist.py
sol/cli/: cliapp.py  register.py  settings.py  sscs.py  stodo.py  stodo_old.py  subparser.py
sol/cli/steditor/: example_editor.py  stodo.py
sol/cli/stodo/: helpers.py  stodo.py
sol/cli/stodo_old/: stodo.py
soltext/: task.py
soltext/cli/: sscs.py
soltext/cli/steditor/: stodo.py
soltext/cli/stodo/: stodo.py
sscs/: __init__.py  cli.py  profile.py  profiles.toml  task.py
tests/: test_cliapp.py  test_stodo.py
tests/unit/: test_task.py  test_tasklist.py
