[tool.poetry]
name = "soltext"
version = "0.1.0"
description = "Text stuff"
authors = ["Stef Korporaal <stefkorporaal@gmail.com>"]

[[tool.poetry.source]]
name = "sleipnir"
url = "https://sleipnir.no-ip.net/pypi"
secondary = true

[tool.poetry.dependencies]
python = "^3.9"
hrshelpers = "^0.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
bandit = "^1.7.0"
pylint = "^2.6.0"
isort = "^5.6.4"
black = "^20.8b1"
mypy = "^0.790"
pytest = "^6.2.1"

[tool.poetry.scripts]
stodo = "soltext.cli.stodo.stodo:main"
sscs = "soltext.cli.sscs:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
