[tool.poetry]
name = "sscs"
version = "0.5.1"
description = "Stef's Source Code Scraper"
authors = ["Stef Korporaal <stefkorporaal@gmail.com>"]
include = ["profiles.toml"]
license = "BSD 3-Clause"

[[tool.poetry.source]]
name = "sleipnir"
url = "https://sleipnir.no-ip.net/pypi"
secondary = true

[tool.poetry.dependencies]
python = "^3.6.1"
rich = "^10.6.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
bandit = "^1.7.0"
pylint = "^2.6.0"
isort = "^5.6.4"
black = "^20.8b1"
mypy = "^0.790"

[tool.poetry.scripts]
sscs = "sscs.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
